--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8000
+  port: 7999
 
 #SQL日志输出，线上需要去掉这配置
 mybatis-plus:
@@ -9,5 +9,5 @@ mybatis-plus:
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/xunmiao_db
-    username: caizhilong
+    username: root
     password: abcd1234
